--- a/ui.frontend/src/main/webpack/components/_separator.scss
+++ b/ui.frontend/src/main/webpack/components/_separator.scss
@@ -1,2 +1,14 @@
-.cmp-separator {}
-.cmp-separator__horizontal-rule {}
+/*.cmp-separator {}
+.cmp-separator__horizontal-rule {}*/
+
+
+.cmp-separator {
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+}
+
+.cmp-separator__horizontal-rule {
+    border-width: 1px;
+    border-style: solid;
+    color: $gray-light;
+}
