--- a/ui.frontend/src/main/webpack/site/styles/experiencefragment_footer.scss
+++ b/ui.frontend/src/main/webpack/site/styles/experiencefragment_footer.scss
@@ -1,7 +1,7 @@
 
 //== XF Footer style, used on page template
 
-footer.experiencefragment {
+/*footer.experiencefragment {
     padding: .5em 1em;
     border-top: 1px solid $color-foreground;
 
@@ -13,4 +13,57 @@ footer.experiencefragment {
         margin: 0;
         border: 0;
     }
+}*/@at-root
+//== XF Footer style, used on page template
+
+footer.experiencefragment {
+    background-color: $black;
+    color: $text-color-inverse;
+    padding: 2rem 0;
+    margin-top: 3rem;
+
+    .cmp-experiencefragment {
+        max-width: $max-content-width;
+        margin: 0 auto;
+    }
+
+    p {
+        font-size: $font-size-small;
+    }
+
+    //== Navigation override _navigation.scss
+    .cmp-navigation {
+        float: left;
+    }
+
+    .cmp-navigation__item-link {
+        color: $text-color-inverse;
+    
+        &:hover,
+        &:focus {
+            text-decoration: underline;
+            background-color: unset;
+        }
+    }
+    
+    /* Hightlight active navigation item */
+    .cmp-navigation__item--active {
+    
+        .cmp-navigation__item-link {
+            text-decoration: underline;
+            background-color: unset;
+        }
+    }
+
+    //== Separator
+
+    .cmp-separator {
+        margin-top: 2em;
+        margin-bottom: 2em;
+    }
+
+    .cmp-separator__horizontal-rule {
+        border: none;
+    }
+
 }
