--- a/ui.frontend/src/main/webpack/site/styles/experiencefragment_header.scss
+++ b/ui.frontend/src/main/webpack/site/styles/experiencefragment_header.scss
@@ -1,7 +1,7 @@
 
 //== XF Header style, used on page template
 
-header.experiencefragment {
+/*header.experiencefragment {
     padding: .5em 1em;
     border-bottom: 1px solid $color-foreground;
 
@@ -127,5 +127,16 @@ header.experiencefragment {
     }
     .cmp-search__input {
         height: 26px;
+    }
+}*/
+
+//== XF Header style, used on page template
+
+header.experiencefragment {
+    padding: 50px 0px;
+
+    .cmp-experiencefragment {
+        max-width: $max-content-width;
+        margin: 0 auto;
     }
 }
